	jobs, if any.  h key goes back to :jobs menu.

	Added :copen command to restore last menu that supports navigation.
	Thanks to Sassan Haradji (a.k.a. sassanh).

	Added % key to menu mode, which navigates to [count]-th percent of the
	list.

	Added 'caseoptions' option that enables more fine-grained control over
	case sensitivity.  Thanks to Alexandru Geana (a.k.a. alegen).

	Enable restoring files from trash from custom views.

	View current directory on ".." for quickview/view mode.  Thanks to
	filterfalse.

	Make :put, :touch and :mkdir accept [line] range, which can be used to
	specify target position in tree-view.  Thanks to filterfalse.

	Enable cancellation of tree preview construction.  Thanks to filterfalse.

	Partially return progress report for menus.  Was disabled by introduction
	of null byte heuristic.

	Accept paths in :touch, not just file names.  Thanks to filterfalse.

	Consider trailing slash for directories or symbolic links that point to
	directories for patterns in 'classify'.

	Do not resolve symbolic links in directory preview.  Thanks to
	filterfalse.

	getpanetype() got new value ("tree") to indicate tree-view.  Thanks to
	filterfalse.

	Disallow applying :chmod on ".." entry.

	Disallow moving/copying/linking files into custom view (put is forbidden,
	so makes sense to forbid these too).

	Disallow selecting ".." entry with :select command.

	Display path to the conflicting file in conflict resolution dialog.

	Provide better messages on i/o errors with 'syscalls'.  Thanks to Behrooz.

	Remove background commands from the :jobs list when corresponding
	processes get terminated by a signal.

	Use <exe file location>/data/colors as global storage of color schemes on
	Windows.  Thanks to r44083.

	Don't disable preview on `--remote --select` if it doesn't hide updated
	pane.  Thanks to Marcin Kurczewski (a.k.a. rr-).

	Try to match terminal size on Windows.  Thanks to randomizedthinking.
