@@ -1,4 +1,4 @@
-.TH VIFM 1 "November 05, 2016" "vifm 0.8.2"
+.TH VIFM 1 "November 07, 2016" "vifm 0.8.2"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -655,6 +655,12 @@ thus speeds up navigation to closest previous entry of the opposite type.
 .TP
 .BI }
 same as {, but in forward direction.
+.TP
+.BI [d
+go to previous directory entry or do nothing.
+.TP
+.BI ]d
+go to next directory entry or do nothing.
 .\" ---------------------------------------------------------------------------
 .SH Using Count
 .\" ---------------------------------------------------------------------------
