@@ -216,6 +216,8 @@ static void cmd_zo(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_zr(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_left_paren(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_right_paren(key_info_t key_info, keys_info_t *keys_info);
+static void cmd_lb_d(key_info_t key_info, keys_info_t *keys_info);
+static void cmd_rb_d(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_left_curly_bracket(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_right_curly_bracket(key_info_t key_info,
 		keys_info_t *keys_info);
@@ -375,6 +377,8 @@ static keys_add_info_t builtin_cmds[] = {
 	{WK_z WK_z,        {{&normal_cmd_zz},   .descr = "center cursor position"}},
 	{WK_LP,            {{&cmd_left_paren},  .descr = "go to previous group of files"}},
 	{WK_RP,            {{&cmd_right_paren}, .descr = "go to next group of files"}},
+	{WK_LB WK_d,       {{&cmd_lb_d}, .descr = "go to previous dir"}},
+	{WK_RB WK_d,       {{&cmd_rb_d}, .descr = "go to next dir"}},
 	{WK_LCB,           {{&cmd_left_curly_bracket},  .descr = "go to previous file/dir"}},
 	{WK_RCB,           {{&cmd_right_curly_bracket}, .descr = "go to next file/dir"}},
 #ifndef _WIN32
@@ -425,6 +429,8 @@ static keys_add_info_t selectors[] = {
 	{WK_s,       {{&selector_s},      .descr = "selected files"}},
 	{WK_LP,      {{&cmd_left_paren},  .descr = "to previous group of files"}},
 	{WK_RP,      {{&cmd_right_paren}, .descr = "to next group of files"}},
+	{WK_LB WK_d, {{&cmd_lb_d}, .descr = "go to previous dir"}},
+	{WK_RB WK_d, {{&cmd_rb_d}, .descr = "go to next dir"}},
 	{WK_LCB,     {{&cmd_left_curly_bracket},  .descr = "to previous file/dir"}},
 	{WK_RCB,     {{&cmd_right_curly_bracket}, .descr = "to next file/dir"}},
 #ifdef ENABLE_EXTENDED_KEYS
@@ -1947,6 +1953,22 @@ static void
 cmd_right_paren(key_info_t key_info, keys_info_t *keys_info)
 {
 	pick_or_move(keys_info, flist_find_group(curr_view, 1));
+}
+
+/* Go to or pick files until and including previous directory entry or do
+ * nothing. */
+static void
+cmd_lb_d(key_info_t key_info, keys_info_t *keys_info)
+{
+	pick_or_move(keys_info, flist_prev_dir(curr_view));
+}
+
+/* Go to or pick files until and including next directory entry or do
+ * nothing. */
+static void
+cmd_rb_d(key_info_t key_info, keys_info_t *keys_info)
+{
+	pick_or_move(keys_info, flist_next_dir(curr_view));
 }
 
 /* Moves cursor to the beginning of the previous group of files defined by them
